# dinotty

./: .gitignore  .taurignore  .upstream-update.json  CLAUDE.md  CLOUDFLARE_TUNNEL_PLUGIN_PLAN.md  Cargo.toml  LICENSE  LOCAL_MODS.md  README.en.md  README.md  VERSION  build-linux-deb.sh  build.rs  build.sh  ghostty-comparison-optimization.md  rustfmt.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml  release.yml  windows-ci.yml
android-app/: .gitignore
android-app/src-tauri/: Cargo.toml  tauri.conf.json
android-app/src-tauri/icons/: icon.icns
android-app/src-tauri/src/: main.rs
android-app/ui/: index.html
bench/: freeze_detect.py  long_running_test.py
deploy/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
deploy/systemd/: README.md  dinotty.service  env.example  install.sh  postinst  uninstall.sh
docs/: additional-features-design.md  agent-api.md  architecture-design.md  audit-webhook.md  clipboard-api.md  comparison.en.md  comparison.md  contributing.en.md  contributing.md  deployment.en.md  deployment.md  event-bus.md  file-preview-design.md  mcp-server.md  notifications.en.md  notifications.md  plugin-development.md  plugins.en.md  plugins.md  releasing.en.md  releasing.md  settings-design.md  token-system.md  web-preview-design.md
docs/task-files/2607/: 260712_per-device-font_pre-task.md  260712_theme-manager_pre-task.md  260714_notify-url-injection_design.md  260714_web-underline-residue_design.md  260715_supervise-tabs_design.md  260716_notification-ux_crossdig.md  260716_notification-ux_design.md  260716_notification-ux_pre-task.md  260716_notification-ux_stress.md  260717_supervise-order-positional_design.md  260718_upstream-pr-delivery_plan.md  260718_workspace-icon_design.md  260718_workspace-icon_pre-task.md  260722_dinotty_upstream-triage.md  260724_dinotty_upstream-triage.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/patches/: @zumer__snapdom.patch
frontend/public/: manifest.json
frontend/src/: App.vue  main.ts  themes.ts
frontend/src/components/: CommandBookmarks.vue  CommandPalette.vue  FilePickerModal.vue  FilePreview.vue  FileWorkspacePreview.vue  HistoryPanel.vue  KbToggleButton.vue  LoginPage.vue  MkbKey.vue  MkbRow.vue  MobileKeyboard.vue  MonitorPopover.vue  NotificationCard.vue  NotificationPanel.vue  PreviewPanel.vue  SelectionOverlay.vue  ServerList.vue  SettingsPanel.vue  SetupPage.vue  StatusBar.vue  SuggestionBar.vue  TabBar.vue  TerminalPane.vue  WebPreview.vue  WorkspaceBadge.vue  mkbTypes.ts
frontend/src/composables/: apiBase.ts  attentionReconcile.ts  computeWheelPlan.ts  formatCloseTabMessage.ts  paneDragContext.ts  useActionKeyboardGesture.ts  useAppForeground.ts  useAudioPlayer.ts  useChartOptions.ts  useCsvEncoding.ts  useCsvFilter.ts  useCursorPicker.ts  useDevTools.ts  useDeviceKeyboardSettings.ts  useDeviceSuperviseReload.ts  useDeviceTextSettings.ts  useDeviceThemeSelection.ts  useDraggable.ts  useEventBridge.ts  useFileEditor.ts  useFileNavigation.ts  useFileOperations.ts  useFileWatch.ts  useFileWorkspaceBoot.ts  useFileWorkspaceLayout.ts  useFileWorkspaceState.ts  useHistory.ts  useI18n.ts  useInlineCreateRename.ts  useIsMobile.ts  useKbRecording.ts  useKeySequenceUtils.ts  useKeybindings.ts  useKeyboardLayout.ts  useKeyboardOverlap.ts  useMarketplace.ts  useMonitor.ts  useMonitorHistory.ts  useNotification.ts  useNotificationAudio.ts  (+45 more)
frontend/src/preview-bridge/: index.ts
frontend/src/stores/: index.ts  pluginMonitor.ts  sessionStore.ts  settingsStore.ts  statusBarItems.ts  uiStore.ts
frontend/src/styles/: base.css  layout.css  mission-control.css  (+2 more)
plugin-api/: PLUGIN_ASSETS_DESIGN.md  index.d.ts
plugins/cc-switch/: README.md  plugin.json  styles.css
plugins/command-bookmarks/: main.js
plugins/json-formatter/: styles.css
plugins/text-diff/: main.js
scripts/: build-linux-deb.sh  build-portable.ps1  build.sh  check-workspace-version.py  deploy-live.sh  dinotty  dinotty-ops.sh  gen-star-history.sh  notify-done.sh  repro-input-channel-replay.mjs  repro-p3-diag.mjs  repro-p3-diag2.mjs  repro-p3-diag3.mjs  repro-p3-diag4.mjs  repro-p3-ime-focusactive.mjs  repro-p5-underline-residue.mjs  verify-p3-fix.mjs  verify-p4-fix.mjs  windows-smoke-test.ps1
src/: agent.rs  attention.rs  audit.rs  auth.rs  event_bus.rs  events.rs  file_preview.rs  file_watcher.rs  history.rs  lib.rs  main.rs  monitor.rs  notification.rs  openapi.rs  plugin.rs  proxy.rs  pty.rs  qr_code.rs  routes.rs  session.rs  settings.rs  tabs.rs  token.rs  util.rs  vt_screen.rs  webhook.rs  workspace.rs  ws.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embedded_server.rs  main.rs
src/api/: clipboard.rs
src/auth/: mod.rs  session.rs  tests.rs
src/mcp/: mod.rs  resources.rs  server.rs  tools.rs  transport.rs
src/notification/: broadcast.rs  mod.rs  util.rs
src/platform/: fs.rs  mod.rs  process.rs  shell.rs
src/plugin/: crud.rs  exec.rs  handlers.rs  helpers.rs  install_git.rs  manager.rs  mod.rs  types.rs
src/proxy/: external.rs  inject.rs  mod.rs  response.rs  rewrite.rs  websocket.rs
src/session/: ledger.rs  manager.rs  mod.rs  tests.rs
src/settings/: handlers.rs  io.rs  mod.rs  normalize.rs  tests.rs  types.rs
src/ssh/: host_key.rs  mod.rs
src/tabs/: handlers.rs  ssh.rs
src/templates/: apply.rs  handlers.rs  mod.rs  store.rs  types.rs
src/workspace/: git.rs  handlers.rs  mod.rs  remote.rs  syntax.rs  tests.rs
src/workspace_mgmt/: mod.rs  tests.rs
src/ws/: mod.rs  openapi.rs  sync.rs  terminal.rs  tests.rs  types.rs
static/: index.html
static/css/: base.css  mobile-keyboard.css  preview.css
static/js/: app.js  mobile-keyboard.js  preview.js  splits.js  tabs.js  terminal.js
tests/: server_smoke.rs  terminal_exit_regression.rs
(+195 files in other folders)
