[workspace]
members = ["src-tauri"]

[package]
name = "dinotty-server"
version = "0.8.2"
edition = "2021"
build = "build.rs"
repository = "https://github.com/xichan96/dinotty"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
vte = "0.13"
axum-extra = { version = "0.9", features = ["multipart"] }
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "blocking", "json"] }
tokio-tungstenite = "0.24"
bytes = "1"
regex = "1.12.3"
unicode-width = "0.2"
urlencoding = "2"
rand = "0.10.1"
lol_html = "2"
local-ip-address = "0.6"
sysinfo = "0.34"
similar = "2"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
tar = "0.4"
flate2 = "1"
zip = "2"

[dev-dependencies]
