[workspace]
members = ["src-tauri"]

[package]
name = "dinotty-server"
version = "0.11.0"
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/xichan96/dinotty"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
vte = "0.13"
axum-extra = { version = "0.9", features = ["multipart"] }
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "blocking", "json"] }
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
regex = "1.12.3"
unicode-width = "0.2"
urlencoding = "2"
rand = "0.10.1"
lol_html = "2"
local-ip-address = "0.6"
sysinfo = "0.34"
similar = "2"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
tempfile = "3"
tar = "0.4"
flate2 = "1"
zip = "2"

[package.metadata.deb]
maintainer = "Dinotty Contributors <noreply@github.com>"
copyright = "2024, Dinotty Contributors"
license-file = ["LICENSE", "0"]
extended-description = "Dinotty is a web-based terminal IDE accessible from any browser."
section = "net"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/dinotty-server", "usr/bin/dinotty-server", "755"],
    ["deploy/systemd/dinotty.service", "lib/systemd/system/dinotty.service", "644"],
    ["deploy/systemd/env.example", "etc/dinotty/env.example", "644"],
]
conf-files = ["/etc/dinotty/env.example"]

[package.metadata.deb.systemd-units]
enable = true
start = true

[dev-dependencies]
